--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "antd": "^5.7.1",
     "avatar-initials": "^6.0.0",
     "axios": "^1.4.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
